--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .env
-/venv
-/__pycache__
-/app/__pycache__
-/app/controllers/__pycache__
-app/models/__pycache__
+/*/venv
+/*/__pycache__
+/*/app/__pycache__
+/*/app/controllers/__pycache__
+/*/app/models/__pycache__
+.history
